# goldenmask

./: .gitignore  README.md  README.rst  README_zh_CN.md  pyproject.toml
.github/workflows/: pythonpackage.yml  pythonpublish.yml
goldenmask/: .goldenmaskignore  __init__.py  __main__.py  cli.py  exceptions.py  protect.py  utils.py
scripts/: format.py
tests/: conftest.py  test_compile_to_pyc.py  test_compile_to_so_or_pyd.py  test_goldenmask.py  test_utils.py  utils.py
tests/data/: goldenmask-0.1.2-py3-none-any.whl
tests/data/demo-project/: manage.py  run.py  setup.py
tests/data/demo-project/demo/: a.py
tests/data/demo-project/demo/c/: d.py
tests/data/demo-project/tests/: b.py
