[tool.poetry]
name = "goldenmask"
version = "0.2.1"
description = "Protect your python source code with one command."
authors = ["youngquan <youngquan@qq.com>"]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/youngquan/goldenmask"

homepage = "https://github.com/youngquan/goldenmask"


[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
cython = "^0.29.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
flake8 = "^3.7.9"
pytest-datadir = "^1.3.1"
vulture = "^1.3"
isort = "^4.3.21"
autoflake = "^1.3.1"
black = "^19.10b0"

[tool.poetry.scripts]
goldenmask = "goldenmask.cli:goldenmask"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

